--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>ESRI Suite</li>
+            <li>PCI Geomatica Suite</li>
             <li>Python</li>
             <li>ArcPy</li>
             <li>SQL</li>
@@ -235,6 +237,7 @@
             <li>Arcade</li>
             <li>AutoCAD</li>
             <li>Tableau</li>
+            <li>Adobe Suite</li>
         </ul>
     </div>
     <!-- End #skills -->
