--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/MTL.png" />
+                        <img src="images/MTL.PNG" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
