--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Recent GIS graduate passionate about climate change, sustainability, and using geospatial data analysis to solve real-world problems. I have several years of combined professional and educational experience. I am confident performing spatial and statistical analysis, writing technical reports, and producing interactive data visualizations. Feel free to view my projects below, and get in touch if you have any questions. <br>
+                        GIS / data analyst passionate about climate change, sustainability, and using geospatial data analysis to solve real-world problems. I have several years of combined professional and educational experience. I am confident performing spatial and statistical analysis, writing technical reports, and producing interactive data visualizations. Feel free to view my projects below, and get in touch if you have any questions. <br>
                         <br>
                         Lead image: Primary Component Analysis (PCA) of a mountainous area in British Columbia by Rachel Thevenard, differentiating cloud (white) from snow (bright pink), rock (deep purple), and bare soil (turquoise).
                     </p>
@@ -83,6 +83,54 @@
         </div>
     </div>
     <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="October 2022 - Present">
+                <h3>Dillon Consulting Ltd.</h3>
+                <h4>GIS / Data Analyst</h4>
+                <p>
+                    Key projects:
+                    <ul style="color:#74808a;font-size:0.9em;margin:0;">
+                        <li>Confidential client: created interactive web map application for use by client and sub-contractors. Included custom geoprocessing widget for use in analysis and reporting.</li>
+                        <li>Halton Region: organized, analyzed, and interpreted waste collection data in ArcGIS Pro/ Power BI. </li>
+                        <li>Department of Transport and Infrastructure (DTI), New Brunswick: modeled, analyzed, and visualized Health and Safety / Incident Reporting data. Published interactive reports to Power BI service to support evidence-based decision making by DTI executives. </li>
+                        <li>Confidential client: conducted suitability analysis to site renewable energy in Atlantic Canada. Used Python to scrape public spatial data for use in analysis. </li>
+                    </ul>
+                </p>
+            </div>
+
+            <div data-date="January 2022 - May 2022">
+                <h3>Centre of Geographic Sciences</h3>
+                <h4>GIS Research Assistant</h4>
+                <p>
+                    Responsibilities included:
+                    <ul style="color:#74808a;font-size:0.9em;margin:0;">
+                        <li>Creating a suitability analysis of undertutilized farmland in the Annapolis County</li>
+                        <li>Using ArcPy to interpolate time-series raster data</li>
+                        <li>Producing informative technical reports</li>
+                        <li>Meeting with stakeholders (consultants, farmers, city planners)</li>
+                        <li>Designing ESRI Web Apps and visualizations to communicate results</li>
+                    </ul>
+                </p>
+            </div>
+
+            <div data-date="August 2020 - August 2020">
+                <h3>University of Waterloo</h3>
+                <h4>GIS Technician</h4>
+                <p>
+                    Responsibilities included:
+                    <ul style="color:#74808a;font-size:0.9em;margin:0;">
+                        <li>Digitizing World Heritage Sites at risk of climate-change induced flooding</li>
+                        <li>Conducting research into available geospatial data pertaining to World Heritage Sites</li>
+                        <li>Updated Excel spreadsheet pertaining to completed sites</li>
+                        <li>Used time management skills to complete large. time-sensitive project within alloted time</li>               
+                    </p>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
@@ -126,50 +174,37 @@
                 <li>
                     In-depth knowledge of sustainability, ecological impacts of climate change, and ecology.
                 </li>
+                <li>
+                    Extensive qualitative and quantitative research experience.
+                </li>
             </ul>
         </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="January 2022 - May 2022">
-                <h3>Centre of Geographic Sciences</h3>
-                <h4>GIS Research Assistant</h4>
-                <p>
-                    Responsibilities included:
-                    <ul style="color:#74808a;font-size:0.9em;margin:0;">
-                        <li>Creating a suitability analysis of undertutilized farmland in the Annapolis County</li>
-                        <li>Using ArcPy to interpolate time-series raster data</li>
-                        <li>Producing informative technical reports</li>
-                        <li>Meeting with stakeholders (consultants, farmers, city planners)</li>
-                        <li>Designing ESRI Web Apps and visualizations to communicate results</li>
-                    </ul>
-                </p>
-            </div>
-
-            <div data-date="August 2020 - August 2020">
-                <h3>University of Waterloo</h3>
-                <h4>GIS Technician</h4>
-                <p>
-                    Responsibilities included:
-                    <ul style="color:#74808a;font-size:0.9em;margin:0;">
-                        <li>Digitizing World Heritage Sites at risk of climate-change induced flooding</li>
-                        <li>Conducting research into available geospatial data pertaining to World Heritage Sites</li>
-                        <li>Updated Excel spreadsheet pertaining to completed sites</li>
-                        <li>Used time management skills to complete large. time-sensitive project within alloted time</li>               
-                    </p>
-            </div>
-        </div>
-    </div>
-    <!-- End #experience -->
-
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/IWG-webmap-2023.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Leaflet JS Web Map for the 2023 Grief Literacy Festival by Good Grief Nova Scotia</h3>
+                        <p>
+                            Interactive web map with custom pop-ups created for the 2023 Grief Literacy Festival by Good Grief Nova Scotia (a division of the International Working Group on Death, Dying, and Bereavement). 
+                            <br>
+                            The web map showcased the locations of festival events, and allowed clicking through to learn more or get tickets.
+                        </p>
+                        <a href="https://goodgriefnovascotia.github.io/webmap-2023/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/suitabilityanalysis2.PNG" />
@@ -202,23 +237,6 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/MTL.PNG" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Cluster Analysis: Percentages of Single People in Greater Montreal Dissemination Areas</h3>
-                        <p>
-                            This class assignment involved applying clustering algorithms to a variable of choice, acquired through ESRI Business Analyst data. My project partner and I chose the variable of "Percentage of Single People", applied to Dissemination Areas in Montreal. 
-                        </p>
-                        <a href="https://github.com/RachelThevenard/gis-portfolio/blob/main/GDAA2010-ClusterAnalysis_Final.ipynb">View Project</a>
-                    </div>
-
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
             </div>
         </div>
     </div>
@@ -228,15 +246,19 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>ESRI Suite</li>
-            <li>PCI Geomatica Suite</li>
+            <li>Power BI</li>
             <li>Python</li>
             <li>ArcPy</li>
+            <li>ModelBuilder</li>
             <li>SQL</li>
             <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>R</li>
             <li>Arcade</li>
             <li>AutoCAD</li>
-            <li>Tableau</li>
+            <li>PC Geomatica Suite</li>
+            <li>Safe FME</li>
             <li>Adobe Suite</li>
         </ul>
     </div>
@@ -261,7 +283,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> Rachel Thevenard
+                        Copyright &copy; <span id="current-year">2024</span> Rachel Thevenard
                     </p>
                 </div>
                 <div class="col-sm-2 top">
