--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     Key projects:
                     <ul style="color:#74808a;font-size:0.9em;margin:0;">
                         <li>Confidential client: created interactive web map application for use by client and sub-contractors. Included custom geoprocessing widget for use in analysis and reporting.</li>
-                        <li>Halton Region: organized, analyzed, and interpreted waste collection data in ArcGIS Pro/ Power BI. </li>
-                        <li>Department of Transport and Infrastructure (DTI), New Brunswick: modeled, analyzed, and visualized Health and Safety / Incident Reporting data. Published interactive reports to Power BI service to support evidence-based decision making by DTI executives. </li>
+                        <li>Regional Ontario client: organized, analyzed, and interpreted waste collection data in ArcGIS Pro/ Power BI. </li>
+                        <li>Provicial New Brunswick client: modeled, analyzed, and visualized Health and Safety / Incident Reporting data. Published interactive reports to Power BI service to support evidence-based decision making by client executives. </li>
                         <li>Confidential client: conducted suitability analysis to site renewable energy in Atlantic Canada. Used Python to scrape public spatial data for use in analysis. </li>
                     </ul>
                 </p>
