--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Rachel Thevenard</h1>
-            <h2>GIS Analyst</h2>
+            <h2>GIS / Data Analyst</h2>
             <!-- <class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        GIS / data analyst passionate about climate change, sustainability, and using geospatial data analysis to solve real-world problems. I have several years of combined professional and educational experience. I am confident performing spatial and statistical analysis, writing technical reports, and producing interactive data visualizations. Feel free to view my projects below, and get in touch if you have any questions. <br>
+                        GIS / Data analyst passionate about climate change, sustainability, and using geospatial data analysis to solve real-world problems. I have several years of combined professional and educational experience. I am confident performing spatial and statistical analysis, writing technical reports, and producing interactive data visualizations. Feel free to view my projects below, and get in touch if you have any questions. <br>
                         <br>
                         Lead image: Primary Component Analysis (PCA) of a mountainous area in British Columbia by Rachel Thevenard, differentiating cloud (white) from snow (bright pink), rock (deep purple), and bare soil (turquoise).
                     </p>
