--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 <h3>Dillon Consulting Ltd.</h3>
                 <h4>GIS / Data Analyst</h4>
                 <p>
-                    Key projects:
+                    Responsibilities include:
                     <ul style="color:#74808a;font-size:0.9em;margin:0;">
-                        <li>Confidential client: created interactive web map application for use by client and sub-contractors. Included custom geoprocessing widget for use in analysis and reporting.</li>
-                        <li>Regional Ontario client: organized, analyzed, and interpreted waste collection data in ArcGIS Pro/ Power BI. </li>
-                        <li>Provicial New Brunswick client: modeled, analyzed, and visualized Health and Safety / Incident Reporting data. Published interactive reports to Power BI service to support evidence-based decision making by client executives. </li>
-                        <li>Confidential client: conducted suitability analysis to site renewable energy in Atlantic Canada. Used Python to scrape public spatial data for use in analysis. </li>
+                        <li>Developing and maintaining interactive web maps and applications to meet the needs of internal and external clients.</li>
+                        <li>Designing, implementing, and maintaining digital field data collection tools.</li>
+                        <li>Modeling, analyzing, and visualizing data. Publishing interactive reports to Power BI service to support evidence-based decision-making by clients. </li>
+                        <li>Designing, implementing, and running internal training session on the use of ArcGIS Pro.</li>
                     </ul>
                 </p>
             </div>
